@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1.6</version>
+    <version>1.7</version>
+    <dependencies>
+      <dependency>profile-collective.js.jqueryui:default</dependency>
+    </dependencies>
 </metadata>
