@@ -1,24 +1,33 @@
 <configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:gs="http://namespaces.zope.org/genericsetup"
-    i18n_domain="Products.ImageEditor">
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:gs="http://namespaces.zope.org/genericsetup"
+  i18n_domain="Products.ImageEditor">
         
-    <gs:upgradeStep
-        title="Upgrade Products.ImageEditor to 1.2"
-        description="Products.ImageEditor upgrade step"
-        source="*"
-        destination="1.2"
-        handler=".upgrades.upgrade_to_1_2"
-        profile="Products.ImageEditor:default"
+  <gs:upgradeStep
+    title="Upgrade Products.ImageEditor to 1.2"
+    description="Products.ImageEditor upgrade step"
+    source="*"
+    destination="1.2"
+    handler=".upgrades.upgrade_to_1_2"
+    profile="Products.ImageEditor:default"
 	/>
 	
 	<gs:upgradeStep
-        title="Upgrade Products.ImageEditor to 1.3"
-        description="Products.ImageEditor upgrade step"
-        source="1.2"
-        destination="1.3"
-        handler=".upgrades.upgrade_to_1_3"
-        profile="Products.ImageEditor:default"
+    title="Upgrade Products.ImageEditor to 1.3"
+    description="Products.ImageEditor upgrade step"
+    source="1.2"
+    destination="1.3"
+    handler=".upgrades.upgrade_to_1_3"
+    profile="Products.ImageEditor:default"
+	/>
+	
+	<gs:upgradeStep
+    title="Upgrade Products.ImageEditor to 1.7"
+    description="Products.ImageEditor upgrade step"
+    source="*"
+    destination="1.7"
+    handler=".upgrades.upgrade_to_1_7"
+    profile="Products.ImageEditor:default"
 	/>
                
 </configure>
